Add metrics, structured logging, and rate limiting to engine
- Expose Prometheus metrics (counters for requests/steps, histograms for planner/executor latency) and add /metrics endpoint
- Configure structlog for JSON logs; add informative logs and warnings
- Add early runtime checks (OPENAI_API_KEY, sandbox user) to surface misconfigurations
- Harden execute_goal: stricter payload/goal validation (non-empty, max length), clearer error events
- Add per-socket rate limiting for execute_goal to prevent abuse
- Update requirements (structlog, prometheus-client) and sandbox setup script
- Add Makefile and pre-commit config for developer tooling and CI consistency

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi
-uvicorn
-python-socketio[asgi]
-pydantic
-openai
-python-dotenv
-structlog
-prometheus-client
+fastapi>=0.110,<1.0
+uvicorn>=0.24,<0.31
+python-socketio>=5.10,<6.0
+pydantic>=2.6,<3.0
+openai>=1.1,<2.0
+python-dotenv>=1.0,<2.0
+structlog>=24.1,<25.0
+prometheus-client>=0.20,<1.0
