Add fake executor mode, error taxonomy, and task cancelation
- Add TERMINUS_FAKE to simulate executor outputs when true or no API key, enabling E2E/local testing without OpenAI calls
- Implement deterministic run_executor mappings (hello/done/failure/remediate/noop)
- Add _safe_int/_safe_str to robustly coerce sandbox results and avoid type errors
- Prefix emitted errors with categories (e.g., rate_limit, validation) for clearer handling/observability
- Cancel any in-flight execute_goal task per socket before starting a new one; keep rate limiting with categorized errors
- Add tests, dev requirements, and GitHub config scaffolding
- Update .env.example (OPENAI_API_KEY line)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 OPENAI_API_KEY=
 SAFETY_IDENTIFIER_PREFIX=terminus-
+# Set to true to run without contacting OpenAI; returns deterministic plans/commands
+TERMINUS_FAKE=false
 ENABLE_PLANNER_WEB_SEARCH=false
 ENABLE_PLANNER_FILE_SEARCH=false
 ENABLE_PLANNER_MCP=false
