Retry only transient API errors; align tool schema and parsing
- Refine _retry to back off only on transient statuses (429/5xx); do not retry client/validation errors; unknown exceptions use capped exponential backoff. Improves correctness and avoids masking invalid requests.
- Fix planner tool allowlist to use object form {"type": "..."} to satisfy Responses API schema.
- Harden function-call command extraction: prefer top-level function_call "emit_bash", fall back to nested content, and accept arguments as JSON string or dict for broader SDK compatibility.
- Update .gitignore to exclude demo logs, backend.pid, and MCP config.

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+logs/demo1.txt
+.gitignore
+.roo/mcp.json
+logs/backend.pid
+.gitignore
+logs/demo2.txt
