--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi>=0.110,<1.0
 uvicorn>=0.24,<0.31
-python-socketio>=5.10,<6.0
+python-socketio==5.11.2
 pydantic>=2.6,<3.0
 openai>=1.1,<2.0
 python-dotenv>=1.0,<2.0
