--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: ruff
         args: ["--fix", "--exit-non-zero-on-fix"]
-      - id: ruff-format
+      # Use Black as the code formatter to avoid formatter ping-pong with ruff-format
 
   - repo: https://github.com/psf/black
     rev: 24.8.0
