--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pre-commit pytest
+          pip install -r requirements-dev.txt
+          pip install pre-commit
           pip install -e .
 
       - name: Pre-commit (lint/format)
