Switch executor to async local HTTP API; update env/tests
- Replace OpenAI-based executor with local HTTP API via httpx
- Add EXECUTOR_API_URL (defaults to http://localhost:8002/generate)
- Make _retry and run_executor async (use asyncio.sleep), non-blocking
- Remove EXECUTOR_STRICT_FUNCTION and EXECUTOR_MODEL envs; keep CFG guard
- Update requirements to include httpx; adjust tests accordingly
- Add server.py and integration_test_runbook.md for local executor

Breaking change: run_executor is now async and must be awaited.

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@ TERMINUS_FAKE=false
 ENABLE_PLANNER_WEB_SEARCH=false
 ENABLE_PLANNER_FILE_SEARCH=false
 ENABLE_PLANNER_MCP=false
-EXECUTOR_STRICT_FUNCTION=true
 EXECUTOR_CFG_SINGLE_LINE="^.*$"
 SOCKET_TRANSPORT=socketio
 SANDBOX_USER=sandboxuser
+
+# --- Local Executor Settings ---
+# The URL of the local executor API
+EXECUTOR_API_URL=http://localhost:8002/generate
