--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 fastapi>=0.110,<1.0
 uvicorn>=0.24,<0.31
+httpx>=0.27,<1.0
+aiohttp>=3.9,<4.0
 python-socketio==5.11.2
 pydantic>=2.6,<3.0
 openai>=1.1,<2.0
